<resources>
    <string name="app_name">ContactApp</string>
    <string name="contact_title_name">Name</string>
    <string name="contact_name_hint">Name</string>
    <string name="contact_title_tel">Tel</string>
    <string name="contact_tel_hint">Tel</string>
    <string name="contact_title_email">Email</string>
    <string name="contact_email_hint">Email</string>
    <string name="visible_text">No Contact, add contact please :)</string>
    <string name="new_contact">New Contact</string>
    <string name="denied_permission_to_call">Call is denined</string>
</resources>
