<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Photo -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/contact_frame_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true" />

    </LinearLayout>

    <!-- Title -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_title_name"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name_hint"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_title_tel"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/crime_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_tel_hint"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_title_email"
            style="?android:listSeparatorTextViewStyle"/>

        <EditText
            android:id="@+id/crime_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_email_hint"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

    </LinearLayout>

</LinearLayout>